No merge cascading anymore. Causes problems with pre-executed find
* Multiple representations of the same entity [hsa.awp.event.model.Event#10] are being merged

https://stackoverflow.com/questions/26591521/java-lang-illegalstateexception-multiple-representations-of-the-same-entity-wit